# fennec

./: CMakeLists.txt  LICENSE  README.md  cross_platform.mk  fennec.mk  makefile
include/: fennec.h
include/data_structures/: dynamic_array.h  hashtable.h
include/utilities/: file.h  path.h  string.h  test_helpers.h
src/: CMakeLists.txt
src/data_structures/: dynamic_array.c  hashtable.c
src/utilities/: file.c  path.c  string.c
tests/: CMakeLists.txt  dynamic_array_tests.c  hashtable_tests.c  path_tests.c  string_tests.c
